# memorize

./: .gitignore  LICENSE  README.md  pyproject.toml
sentencas/: apps.py  models.py  urls.py  views.py
sentencas/migrations/: 0001_initial.py  0002_area_ativo_autor_ativo_sentenca_ativo_and_more.py  0003_alter_area_usuario_alter_autor_usuario_and_more.py  0004_area_unique_nome_usuario_area_and_more.py  0005_alter_autor_options.py
sentencas/templatetags/: sentencas_extras.py
setup/: settings.py  urls.py
static/styles/: style.css
templates/: base.html
templates/partials/: _alertas.html  _cabecalho.html  _cabecalho_e_menu.html  _menu.html  _rodape.html
templates/sentencas/: areas.html  autores.html  criar_area.html  criar_autor.html  criar_sentenca.html  editar_area.html  editar_autor.html  editar_sentenca.html  sentencas.html
templates/templatetags/: _sentenca_aleatoria.html
templates/usuarios/: cadastro.html  configuracoes.html  dados.html  definir_senha.html  login.html  nao_logado.html
usuarios/: models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_alter_configuracoes_usuario_tipo_de_relatorio.py  0003_alter_configuracoes_usuario_relatorios_por_dia_and_more.py  0004_alter_configuracoes_usuario_relatorios_por_dia.py  0005_alter_configuracoes_usuario_relatorios_por_dia_and_more.py  0006_alter_configuracoes_usuario_tipo_de_relatorio.py  0007_recuperadordesenha.py  0008_alter_recuperadordesenha_token.py  0009_alter_configuracoes_usuario_relatorios_por_dia.py  0010_alter_configuracoes_usuario_relatorios_por_dia.py  (+1 more)
(+2 files in other folders)
