[tool.poetry]
name = "memorize"
version = "0.1.0"
description = ""
authors = ["Jeferson Campos"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pylint = "^2.15.5"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
